update with 14 changes

--- a/note/closure.html
+++ b/note/closure.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>클로저</h1>
-<div class="title-date">2020년 6월 17일 수정</div>
+<div class="title-date">2020년 6월 18일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -71,11 +71,7 @@
 </div>
 </div>
 <p>
-개인적으로 컴퓨터 프로그래밍 개념에서 클로저(Closure)는 동적으로 생성되는 함수라고 정의한다. 그리고 생성되는 시점의 주변 환경을 복제하는 특수한 능력을 갖추고 있다는 점이 공통적이기도 할 것 같다. 그 외에 이름 없는 함수라고도 불리기도 한다.
-</p>
-
-<p>
-물론 매우 주관적인 정의라는 것에 유의하자.
+개인적으로 컴퓨터 프로그래밍 개념에서 클로저(Closure)는 동적으로 생성되는 함수라고 정의한다. 그리고 생성되는 시점의 주변 환경을 복제하는 특수한 능력을 갖추고 있다는 점이 공통적이기도 할 것 같다. 정확한 특징은 아니지만 이름 없는(익명) 함수라고도 불릴 때도 있다.
 </p>
 
 <div id="outline-container-c64282ad" class="outline-2">
@@ -289,14 +285,14 @@ int (^selfAdder)(int) = ^int(int y) {
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <div class="article-link-date">
-2020년 6월 16일 수정</div>
+2020년 6월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
 <div class="article-link-date">
 2020년 6월 16일 수정</div>
 </div>
