--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,34 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/namespace.html">네임스페이스</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/closure.html">클로저</a></h2>
+<div class="article-link-date">
+2020년 6월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/json.html">JSON</a></h2>
 <div class="article-link-date">
 2020년 6월 18일 수정</div>
@@ -75,13 +103,6 @@
 <h2><a class="article-link-title" href="/note/yaml.html">YAML</a></h2>
 <div class="article-link-date">
 2020년 6월 18일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/closure.html">클로저</a></h2>
-<div class="article-link-date">
-2020년 6월 17일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -115,13 +136,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
-<div class="article-link-date">
-2020년 6월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <div class="article-link-date">
 2020년 6월 16일 수정</div>
 </div>
@@ -236,13 +250,6 @@
 <h2><a class="article-link-title" href="/note/ielm.html">ielm</a></h2>
 <div class="article-link-date">
 2020년 6월 8일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<div class="article-link-date">
-2020년 6월 7일 수정</div>
 </div>
 </div>
 <div class="article-link">
