--- a/note/rust.html
+++ b/note/rust.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Rust</h1>
-<div class="title-date">2020년 6월 7일 수정</div>
+<div class="title-date">2020년 6월 19일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -176,7 +176,7 @@ rustup은 통합 인스톨러 패키지라고 보면 된다.
 </pre>
 </div>
 <p>
-자바와 비슷한 스타일의 네임스페이스 체계를 갖추고 있는데 개인적으로는 좀 불만이지만 장점도 있으니깐 이렇게 쓰겠지?
+자바와 비슷한 스타일의 <a href="namespace.html">네임스페이스</a> 체계를 갖추고 있는데 개인적으로는 좀 불만이지만 장점도 있으니깐 이렇게 쓰겠지?
 </p>
 </div>
 </div>
@@ -932,7 +932,7 @@ s3 += &amp;s2;          <span style="color: #5B6268;">// </span><span style="col
 <h2 id="5da15dae">모듈(Module) 및 접근 제어(Access Control)</h2>
 <div class="outline-text-2" id="text-5da15dae">
 <p>
-모듈은 <code>mod</code> 키워드로 네임스페이스를 구분하듯이 정의할 수 있다.
+모듈은 <code>mod</code> 키워드로 <a href="namespace.html">네임스페이스</a>를 구분하듯이 정의할 수 있다.
 </p>
 <div class="org-src-container">
 <pre class="src src-rust"><span style="color: #51afef;">mod</span> <span style="color: #a9a1e1;">module_name</span> {
