--- a/note/swift.html
+++ b/note/swift.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Swift</h1>
-<div class="title-date">2020년 6월 16일 수정</div>
+<div class="title-date">2020년 6월 19일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -245,7 +245,7 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 다이내믹인 경우 <a href="swift.html">Swift</a> 인스턴스가 아니게 된다.
 <code>NSObject</code> 를 상속 받은 것과 비슷한 상태가 되기 때문이다. 덕분에 무거워진다.
 하지만 메시지 디스패치를 사용할 수 있어서 KVO(Key-Value Observing)가 가능해지게 된다.</dd>
-<dt><code>@objc</code></dt><dd><code>@objc</code> 는 <a href="objective-c.html">Objective-C</a> 네임스페이스에 등록 시켜서
+<dt><code>@objc</code></dt><dd><code>@objc</code> 는 <a href="objective-c.html">Objective-C</a> <a href="namespace.html">네임스페이스</a>에 등록 시켜서
 메시지 디스패치가 가능하게 해 준다.
 반대로 <code>@noobjc</code> 는 메시지 디스패치를 못 하게 막아버린다.</dd>
 <dt><code>@inline</code></dt><dd>인라인(inline)은 말 그대로 호출을 하지 않고
@@ -394,9 +394,16 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/closure.html">클로저</a></h2>
 <div class="article-link-date">
-2020년 6월 17일 수정</div>
+2020년 6월 18일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -418,13 +425,6 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
 2020년 6월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<div class="article-link-date">
-2020년 6월 7일 수정</div>
 </div>
 </div>
 <div class="article-link">
