update with 1 changes

--- a/note/namespace.html
+++ b/note/namespace.html
@@ -68,7 +68,7 @@
 </p>
 
 <p>
-그렇다면 같은 이름의 사람이라도 이들을 구분하기 위해 몇 가지 그룹으로 나눌 수 있다. 예를 들어 성(Family Name)으로 나눈다거나 직업으로 분류한다거나 사는 곳으로 분류한다거나 등등으로 다양한 방법으로 나눌 수 있다.
+그렇다면 같은 이름의 사람이라도 이들을 구분하기 위해 몇 가지 그룹으로 나눌 수 있다. 예를 들어 성(Family Name)으로 나눈다거나 직업으로 분류한다거나 사는 곳으로 분류한다거나 등등 다양한 방법으로 나눌 수 있다.
 </p>
 
 <p>
@@ -93,7 +93,7 @@
 </p>
 
 <p>
-하지만, 클래싱(Classing)이나 패키지 분리를 통한 네임스페이스 분리도 가능하기 때문에 '동명이인을 가려내기 위한 그룹짓기' 라는 의미로 이해하는 것이 좋을 것 같다.
+하지만 클래싱(Classing)이나 패키지 분리를 통한 네임스페이스 분리도 가능하기 때문에 '동명이인을 가려내기 위한 그룹짓기' 라는 의미로 이해하는 것이 좋을 것 같다.
 </p>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
