--- a/note/emacs.html
+++ b/note/emacs.html
@@ -475,7 +475,14 @@ Overview of search tools for desktop and mobile; using Emacs and Ripgrep as desk
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 6월 10일 수정</div>
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs-troubleshotting.html">Doom Emacs 문제 해결</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
 </div>
 </div>
 <div class="article-link">
