--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/doom-emacs-troubleshotting.html">Doom Emacs 문제 해결</a></h2>
+<div class="article-link-date">
+2020년 6월 19일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/namespace.html">네임스페이스</a></h2>
 <div class="article-link-date">
 2020년 6월 19일 수정</div>
@@ -145,13 +159,6 @@
 <h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
 <div class="article-link-date">
 2020년 6월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
-<div class="article-link-date">
-2020년 6월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
