--- a/note/uglify-js.html
+++ b/note/uglify-js.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>UglifyJS</h1>
-<div class="title-date">2020년 6월 10일 수정</div>
+<div class="title-date">2020년 6월 21일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -82,7 +82,7 @@ UglifyJS는 <a href="javascript.html">Javascript</a> 파서(Parser) 겸
 <h2 id="f6c3e57e">설치</h2>
 <div class="outline-text-2" id="text-f6c3e57e">
 <p>
-npm으로 쉽게 설치할 수 있다.
+<a href="npm.html">npm</a>으로 쉽게 설치할 수 있다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">npm i -g uglify-js
