--- a/note/css.html
+++ b/note/css.html
@@ -677,6 +677,13 @@ alt는 접근성을 보완하기 위해 중요한 설명이다. 예를 들어
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/spa.html">SPA</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/csso.html">CSSO</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
