--- a/note/index.html
+++ b/note/index.html
@@ -58,7 +58,7 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/spa.html">SPA</a></h2>
+<h2><a class="article-link-title" href="/note/seo.html">SEO</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
 </div>
@@ -66,6 +66,13 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/npm.html">npm</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/spa.html">SPA</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
 </div>
