update with 6 changes

--- a/note/spa.html
+++ b/note/spa.html
@@ -80,7 +80,7 @@ SPA는 스크립트로 모든 UI를 생성하고 처리하기 때문에 <a href=
 </p>
 
 <p>
-즉 SPA는 SEO(Search Engine Optimization)에 최악인 웹 페이지이기도 하다. 그리고 사용자 입장에서는 거대한 스크립트를 로딩해야 하기에 첫 등장에서 답답함을 느낄 수 있다.
+즉 SPA는 <a href="seo.html">SEO</a>에 최악인 웹 페이지이기도 하다. 그리고 사용자 입장에서는 거대한 스크립트를 로딩해야 하기에 첫 등장에서 답답함을 느낄 수 있다.
 </p>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
