--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/seo-strategy.html">SEO를 위한 전략</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/spa.html">SPA</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
@@ -191,13 +198,6 @@
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs-shortcuts.html">Doom Emacs 단축키</a></h2>
-<div class="article-link-date">
-2020년 6월 20일 수정</div>
 </div>
 </div>
 </div>
