update with 1 changes

--- a/note/seo.html
+++ b/note/seo.html
@@ -75,7 +75,7 @@ SEO는 Search Engine Optimization 즉 검색엔진 최적화의 줄임말이다.
 </p>
 
 <p>
-이 SEO를 제대로 하기 위해서는 뭐가 필요할까?
+검색엔진에 맞는 최적화를 하기 위해서는 다양한 요소가 고려된다. 더 자세한 내용을 알고 싶다면 <a href="seo-strategy.html">SEO를 위한 전략</a> 글을 참고하자.
 </p>
 
 <div id="outline-container-867ded23" class="outline-2">
