update with 4 changes

--- a/note/seo-strategy.html
+++ b/note/seo-strategy.html
@@ -70,7 +70,7 @@
 </div>
 </div>
 <p>
-<a href="seo.html">SEO</a> 즉 검색엔진 최적화를 위한 요소들을 알아보자.
+<a href="seo.html">SEO</a> 즉 검색엔진 최적화를 위한 요소들을 알아보자. 당연하겠지만, 검색엔진이 페이지를 잘 이해할 수 있게 만드는 것을 풀어서 정리한 글이 대부분이다.
 </p>
 
 <div id="outline-container-bf24b390" class="outline-2">
