update with 8 changes

--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/seo-strategy.html">SEO를 위한 전략</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
@@ -241,13 +255,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/english-note.html">영어 노트</a></h2>
-<div class="article-link-date">
-2020년 6월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
 2020년 6월 15일 수정</div>
 </div>
