--- a/note/python.html
+++ b/note/python.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Python</h1>
-<div class="title-date">2020년 6월 15일 수정</div>
+<div class="title-date">2020년 6월 21일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -66,12 +66,6 @@
 <li><a href="#db81cb90">버전 별 정리</a>
 <ul>
 <li><a href="#80a938c3">3.8</a></li>
-</ul>
-</li>
-<li><a href="#be124333">List Comprehension 정리</a>
-<ul>
-<li><a href="#46f3ea05">Map</a></li>
-<li><a href="#d7778d0c">Filter</a></li>
 </ul>
 </li>
 <li><a href="#3d558e5f">Bytes 관련 팁</a></li>
@@ -104,6 +98,7 @@
 <li><a href="#540afe19">간단한 웹 서버 띄우기</a></li>
 </ul>
 </li>
+<li><a href="#867ded23">관련글</a></li>
 <li><a href="#abdaed76">패키지 노트</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
@@ -160,44 +155,6 @@
 <code>*</code> 이후는 키워드 표기법만 사용 가능하다.
 각각은 별도로도 사용 가능하다.</dd>
 </dl>
-</div>
-</div>
-</div>
-<div id="outline-container-be124333" class="outline-2">
-<h2 id="be124333">List Comprehension 정리</h2>
-<div class="outline-text-2" id="text-be124333">
-<p>
-보통 함수형 언어들의 핵심 일꾼(?)인 map과 filter의 사용법이 Python에서는 특별한 문법으로 제공된다.
-</p>
-</div>
-<div id="outline-container-46f3ea05" class="outline-3">
-<h3 id="46f3ea05">Map</h3>
-<div class="outline-text-3" id="text-46f3ea05">
-<p>
-아래는 somelist라는 리스트에 들어있는 데이터를 제곱한 결과로 가공하여 새로운 리스트로 생성한다.
-</p>
-<div class="org-src-container">
-<pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
-</pre>
-</div>
-<p>
-<code>for</code> 앞에 있는 식이 가공하는 식이다.
-</p>
-</div>
-</div>
-<div id="outline-container-d7778d0c" class="outline-3">
-<h3 id="d7778d0c">Filter</h3>
-<div class="outline-text-3" id="text-d7778d0c">
-<p>
-아래는 somelist라는 리스트에서 각 아이템이 iswhat 함수의 결과를 만족하는 경우만을 뽑아서 별도의 리스트로 생성한다.
-</p>
-<div class="org-src-container">
-<pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
-</pre>
-</div>
-<p>
-뒤에 붙어있는 <code>if</code> 의 의미만 이해한다면 어려울 것 없는 문법 같다.
-</p>
 </div>
 </div>
 </div>
@@ -491,6 +448,14 @@ Python 3 부터 사용 가능한 커맨드다.
 </div>
 </div>
 </div>
+<div id="outline-container-867ded23" class="outline-2">
+<h2 id="867ded23">관련글</h2>
+<div class="outline-text-2" id="text-867ded23">
+<ul class="org-ul">
+<li><a href="python-list-comprehension.html">Python List Comprehension</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-abdaed76" class="outline-2">
 <h2 id="abdaed76">패키지 노트</h2>
 <div class="outline-text-2" id="text-abdaed76">
@@ -523,6 +488,13 @@ Python 3 부터 사용 가능한 커맨드다.
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
