--- a/note/swift.html
+++ b/note/swift.html
@@ -394,6 +394,20 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <div class="article-link-date">
 2020년 6월 19일 수정</div>
@@ -418,13 +432,6 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
 <div class="article-link-date">
 2020년 6월 16일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
-<div class="article-link-date">
-2020년 6월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
