update with 7 changes

--- a/note/index.html
+++ b/note/index.html
@@ -65,6 +65,20 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring(Python)</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-regular-expression.html">Python 정규표현식</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
@@ -334,13 +348,6 @@
 <h2><a class="article-link-title" href="/note/boilerplate.html">보일러플레이트</a></h2>
 <div class="article-link-date">
 2020년 6월 6일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring</a></h2>
-<div class="article-link-date">
-2020년 6월 5일 수정</div>
 </div>
 </div>
 <div class="article-link">
