--- a/note/python-bitstring.html
+++ b/note/python-bitstring.html
@@ -6,12 +6,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>bitstring - Seorenn Note</title>
-<meta name="twitter:title" content="bitstring" />
-<meta name="og:title" content="bitstring" />
-<meta name="description" content="파이썬 bitstring 패키지 소개" />
-<meta name="twitter:description" content="파이썬 bitstring 패키지 소개" />
-<meta name="og:description" content="파이썬 bitstring 패키지 소개" />
+<title>bitstring(Python) - Seorenn Note</title>
+<meta name="twitter:title" content="bitstring(Python)" />
+<meta name="og:title" content="bitstring(Python)" />
+<meta name="description" content="파이썬의 bitstring 패키지가 무엇인지 살펴보자" />
+<meta name="twitter:description" content="파이썬의 bitstring 패키지가 무엇인지 살펴보자" />
+<meta name="og:description" content="파이썬의 bitstring 패키지가 무엇인지 살펴보자" />
 <link rel="canonical" href="https://seorenn.github.io/note/python-bitstring.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/python-bitstring.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -56,8 +56,8 @@
 </div>
 <section class="content">
 <header>
-<h1>bitstring</h1>
-<div class="title-date">2020년 6월 5일 수정</div>
+<h1>bitstring(Python)</h1>
+<div class="title-date">2020년 6월 21일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -205,7 +205,7 @@ BitStream(<span style="color: #98be65;">'0x01020304'</span>)
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
-2020년 6월 5일 수정</div>
+2020년 6월 21일 수정</div>
 </div>
 </div>
 </div>
