--- a/note/python.html
+++ b/note/python.html
@@ -453,6 +453,7 @@ Python 3 부터 사용 가능한 커맨드다.
 <div class="outline-text-2" id="text-867ded23">
 <ul class="org-ul">
 <li><a href="python-list-comprehension.html">Python List Comprehension</a></li>
+<li><a href="python-regular-expression.html">Python 정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -460,7 +461,7 @@ Python 3 부터 사용 가능한 커맨드다.
 <h2 id="abdaed76">패키지 노트</h2>
 <div class="outline-text-2" id="text-abdaed76">
 <ul class="org-ul">
-<li><a href="python-bitstring.html">bitstring</a></li>
+<li><a href="python-bitstring.html">bitstring(Python)</a></li>
 </ul>
 </div>
 </div>
@@ -488,6 +489,20 @@ Python 3 부터 사용 가능한 커맨드다.
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring(Python)</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-regular-expression.html">Python 정규표현식</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
@@ -521,13 +536,6 @@ Python 3 부터 사용 가능한 커맨드다.
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
 2020년 6월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring</a></h2>
-<div class="article-link-date">
-2020년 6월 5일 수정</div>
 </div>
 </div>
 <div class="article-link">
