--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring(Python)</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python-regular-expression.html">Python 정규표현식</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-list-comprehension.html">Python List Comprehension</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
@@ -182,20 +196,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/poetry.html">Poetry</a></h2>
-<div class="article-link-date">
-2020년 6월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/csso.html">CSSO</a></h2>
-<div class="article-link-date">
-2020년 6월 21일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/uglify-js.html">UglifyJS</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
 </div>
