--- a/note/index.html
+++ b/note/index.html
@@ -65,6 +65,20 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python3-manual-migration.html">Python 3로 수동으로 옮겨가기</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 6월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python-bitstring.html">bitstring(Python)</a></h2>
 <div class="article-link-date">
 2020년 6월 21일 수정</div>
@@ -185,13 +199,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
-<div class="article-link-date">
-2020년 6월 19일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
 <div class="article-link-date">
 2020년 6월 19일 수정</div>
 </div>
