update with 1 changes

--- a/note/italian-note.html
+++ b/note/italian-note.html
@@ -78,8 +78,8 @@
 <blockquote>
 <p>
 이태리(Italy)? 이탈리아(Italia)다.
-베니스(Venice)죠? 베네치아(Venezia)다.
-플로렌스(Florence)죠? 피렌체(Firenze)다.
+베니스(Venice)? 베네치아(Venezia)다.
+플로렌스(Florence)? 피렌체(Firenze)다.
 밀란(Milan)? 밀라노(Milano)다.
 로마? 왜 이건 또 Rome이라 쓰고 로마라고 읽지? 어쨌든 로마(Roma)다.
 하여간 영어는 너무 많은 것을 오염시켰다. 뭘? 아 몰라 내맘임.
