update with 10 changes

--- a/note/rust.html
+++ b/note/rust.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Rust</h1>
-<div class="title-date">2020년 6월 19일 수정</div>
+<div class="title-date">2020년 6월 21일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -994,6 +994,7 @@ s3 += &amp;s2;          <span style="color: #5B6268;">// </span><span style="col
 메모리 해제를 특정 스레드에서 하게 해서 레이턴시를 개선시키는 기술에 대한 이야기다.
 10000배 빨라진다는 것은 그냥 해제로 발생하는 레이턴시 개선 수준 이야기지 그렇게 많이 빨라지는 것은 아닐 것 같다.
 어쨌거나 러스트의 메모리 관리에서나 가능한 특수한 메모리 관리 기법이다.</li>
+<li><a target="_blank" href="http://cliffle.com/p/dangerust/">🌏Learn Rust the Dangerous Way</a>: C 코드와 Rust 코드 비교로 Rust를 공부할 수 있는 사이트</li>
 </ul>
 </div>
 </div>
@@ -1014,7 +1015,7 @@ s3 += &amp;s2;          <span style="color: #5B6268;">// </span><span style="col
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/cargo.html">Cargo</a></h2>
 <div class="article-link-date">
-2020년 5월 25일 수정</div>
+2020년 6월 21일 수정</div>
 </div>
 </div>
 </div>
