--- a/note/git.html
+++ b/note/git.html
@@ -41,9 +41,7 @@
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" alt="Seorenn" /></a>
 <nav>
 <a href="/" title="Home"><i class="material-icons md-light">home</i></a>
-<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
- <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
- <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
+<a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
 </nav>
 </div>
 </header>
@@ -57,7 +55,7 @@
 <section class="content">
 <header>
 <h1>Git</h1>
-<div class="title-date">2020년 6월 8일 수정</div>
+<div class="title-date">2020년 6월 22일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -98,6 +96,7 @@
 </ul>
 </li>
 <li><a href="#97d1a2f5">설정 분리하기</a></li>
+<li><a href="#aa6e479a">전역 무시(Global Git-Ignore)</a></li>
 <li><a href="#9ec9cd97">페이저 비활성화</a></li>
 <li><a href="#0bbb90e1">외부 링크</a></li>
 </ul>
@@ -856,6 +855,22 @@ apply 명령을 통해 현재 브랜치에 간단히 패치를 적용할 수 있
 <p>
 github 설정이 추가되어 있다는 점만 제외하면 지극히 평범한 Git 설정이다.
 </p>
+</div>
+</div>
+<div id="outline-container-aa6e479a" class="outline-2">
+<h2 id="aa6e479a">전역 무시(Global Git-Ignore)</h2>
+<div class="outline-text-2" id="text-aa6e479a">
+<p>
+전역으로 무시할 파일 목록을 만들어 두고 싶다면 우선 <code>~/.gitignore</code> 파일에 원하는 내용을 작성한다. (사실 파일 이름은 마음대로 지어도 관계는 없다)
+</p>
+
+<p>
+이후 아래 커맨드로 전역 설정으로 지정하면 이후 효과가 발생한다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash"><span style="color: #ECBE7B;">git</span> config --global core.excludesFile ~/.gitignore
+</pre>
+</div>
 </div>
 </div>
 <div id="outline-container-9ec9cd97" class="outline-2">
