update with 7 changes

--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/celery-dist-async-tasks.html">Celery로 비동기 분산처리 해보기</a></h2>
+<div class="article-link-date">
+2020년 6월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/celery.html">Celery</a></h2>
+<div class="article-link-date">
+2020년 6월 22일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
 <div class="article-link-date">
 2020년 6월 22일 수정</div>
