update with 6 changes

--- a/note/celery-dist-async-tasks.html
+++ b/note/celery-dist-async-tasks.html
@@ -6,12 +6,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>Celery로 비동기 분산처리 해보기 - Seorenn Note</title>
-<meta name="twitter:title" content="Celery로 비동기 분산처리 해보기" />
-<meta name="og:title" content="Celery로 비동기 분산처리 해보기" />
-<meta name="description" content="Celery의 설치 및 패키지 사용법, 간단한 서버 사용법 등을 정리하는 글" />
-<meta name="twitter:description" content="Celery의 설치 및 패키지 사용법, 간단한 서버 사용법 등을 정리하는 글" />
-<meta name="og:description" content="Celery의 설치 및 패키지 사용법, 간단한 서버 사용법 등을 정리하는 글" />
+<title>Celery로 해보는 비동기 분산처리 기초 - Seorenn Note</title>
+<meta name="twitter:title" content="Celery로 해보는 비동기 분산처리 기초" />
+<meta name="og:title" content="Celery로 해보는 비동기 분산처리 기초" />
+<meta name="description" content="Celery의 설치 및 패키지 사용법, 간단한 워커 서버 사용법 등을 정리하는 글" />
+<meta name="twitter:description" content="Celery의 설치 및 패키지 사용법, 간단한 워커 서버 사용법 등을 정리하는 글" />
+<meta name="og:description" content="Celery의 설치 및 패키지 사용법, 간단한 워커 서버 사용법 등을 정리하는 글" />
 <link rel="canonical" href="https://seorenn.github.io/note/celery-dist-async-tasks.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/celery-dist-async-tasks.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
@@ -54,7 +54,7 @@
 </div>
 <section class="content">
 <header>
-<h1>Celery로 비동기 분산처리 해보기</h1>
+<h1>Celery로 해보는 비동기 분산처리 기초</h1>
 <div class="title-date">2020년 6월 22일 수정</div>
 </header>
 <div id="table-of-contents">
@@ -219,6 +219,16 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/celery.html">Celery</a></h2>
+<div class="article-link-date">
+2020년 6월 22일 수정</div>
+</div>
+</div>
 </div>
 </section>
 <div class="side-ad-container">
