--- a/note/celery.html
+++ b/note/celery.html
@@ -84,6 +84,10 @@
 <p>
 Celery는 <a href="python.html">Python</a> 용 비동기 태스크 작업을 도와주는 패키지 겸 서버 데몬이다. 비동기 분산 처리를 위해 함수 단위의 태스크를 각종 브로커를 이용해 호출할 수 있고 멀티프로세스 워커 타입의 서버를 지원한다.
 </p>
+
+<p>
+자세한 내용은 <a href="celery-dist-async-tasks.html">Celery로 해보는 비동기 분산처리 기초</a>를 참고하자.
+</p>
 </div>
 </div>
 <div class="mid-ad-container">
@@ -101,7 +105,7 @@ Celery는 <a href="python.html">Python</a> 용 비동기 태스크 작업을 도
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/celery-dist-async-tasks.html">Celery로 비동기 분산처리 해보기</a></h2>
+<h2><a class="article-link-title" href="/note/celery-dist-async-tasks.html">Celery로 해보는 비동기 분산처리 기초</a></h2>
 <div class="article-link-date">
 2020년 6월 22일 수정</div>
 </div>
