--- a/note/celery.html
+++ b/note/celery.html
@@ -82,7 +82,7 @@
 <h2 id="ac639b5f">파이썬 비동기 태스크 패키지 겸 매니저</h2>
 <div class="outline-text-2" id="text-ac639b5f">
 <p>
-Celery는 <a href="python.html">Python</a> 용 비동기 태스크 작업을 도와주는 패키지 겸 서버 데몬이다. 비동기 분산 처리를 위해 함수 단위의 태스크를 각종 브로커를 이용해 호출할 수 있고 멀티프로세스 워커 타입의 서버를 지원한다.
+Celery는 <a href="python.html">Python</a> 용 태스크 큐(Task Queue) 기반의 비동기 태스크 작업을 도와주는 패키지 겸 워커(worker) 서버다. 비동기 분산 처리를 위해 함수 단위의 태스크를 각종 브로커를 이용해 호출할 수 있고 멀티프로세스 워커 타입의 서버를 지원한다.
 </p>
 
 <p>
